.infra/argocd/argo-install/resources/secure-headers.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: secure-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: "{clientIP}"
      X-Forwarded-Proto: "https"
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
