.infra/argocd/argo-install/resources/argo-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ing
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - web
    - websecure
  routes:
    - match: Host(`argocd.cloudlockops.io`)
      kind: Rule
      services:
        - name: argocd-server # Requests will be forwarded to this service
          port: 80
  tls:
    secretName: argocd.cloudlockops.io
